萱草可以rename了

--- a/Lyyneheym/Hemerocallis/Forms/MainWindow.xaml
+++ b/Lyyneheym/Hemerocallis/Forms/MainWindow.xaml
@@ -46,9 +46,8 @@
                 <StackPanel HorizontalAlignment="Stretch"
                             VerticalAlignment="Top"
                             Orientation="Vertical">
-                    <Button Content="导出工程文件" Height="40" FontSize="16" Foreground="White" Background="Transparent" HorizontalContentAlignment="Right" Padding="0,0,10,0" BorderThickness="0,0,0,0" FontFamily="Microsoft YaHei" IsTabStop="False"/>
-                    <Button Content="导出文本文件" Height="40" FontSize="16" Foreground="White" Background="Transparent" HorizontalContentAlignment="Right" Padding="0,0,10,0" BorderThickness="0,0,0,0" FontFamily="Microsoft YaHei" IsTabStop="False"/>
-                    <Button Content="导出PDF" Height="40" FontSize="16" Foreground="White" Background="Transparent" HorizontalContentAlignment="Right" Padding="0,0,10,0" BorderThickness="0,0,0,0" FontFamily="Microsoft YaHei" IsTabStop="False"/>
+                    <Button Content="导出文本文件" Height="40" FontSize="16" Foreground="White" Background="Transparent" HorizontalContentAlignment="Right" Padding="0,0,10,0" BorderThickness="0,0,0,0" FontFamily="Microsoft YaHei" IsTabStop="False" Click="Button_Click_Menu_Txt"/>
+                    <Button Content="导出Halation工程" Height="40" FontSize="16" Foreground="White" Background="Transparent" HorizontalContentAlignment="Right" Padding="0,0,10,0" BorderThickness="0,0,0,0" FontFamily="Microsoft YaHei" IsTabStop="False" Click="Button_Click_Menu_Halation"/>
                     <Rectangle Height="2" Fill="White" Opacity="0.2" Margin="20,30,0,0"/>
                     <Button Content="统计" Height="40" FontSize="16" Foreground="White" Background="Transparent" HorizontalContentAlignment="Right" Padding="0,0,10,0" BorderThickness="0,0,0,0" FontFamily="Microsoft YaHei" IsTabStop="False" Click="Button_Click_Menu_Statistics"/>
                     <Button Content="分类管理" Height="40" FontSize="16" Foreground="White" Background="Transparent" HorizontalContentAlignment="Right" Padding="0,0,10,0" BorderThickness="0,0,0,0" FontFamily="Microsoft YaHei" IsTabStop="False"/>
@@ -83,7 +82,7 @@
         <!-- 右上角命令栏 -->
         <StackPanel Name="StackPanel_Commands" Grid.Column="1" Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Right">
             <Image ToolTip="创建一个贴纸" Source="/Hemerocallis;component/Assets/UI_Btn_Refer.png" Opacity="0.4" Height="48" Width="48" MouseEnter="Image_TRBtn_MouseEnter" MouseLeave="Image_TRBtn_MouseLeave" MouseLeftButtonUp="Image_MouseLeftButtonUp_TipBtn"/>
-            <Image ToolTip="管理工程" Source="/Hemerocallis;component/Assets/UI_Btn_Note.png" Opacity="0.4" Height="48" Width="48" MouseEnter="Image_TRBtn_MouseEnter" MouseLeave="Image_TRBtn_MouseLeave"/>
+            <Image ToolTip="管理工程" Source="/Hemerocallis;component/Assets/UI_Btn_Note.png" Opacity="0.4" Height="48" Width="48" MouseEnter="Image_TRBtn_MouseEnter" MouseLeave="Image_TRBtn_MouseLeave" MouseLeftButtonUp="Image_MouseLeftButtonUp_WorldBtn"/>
             <Rectangle Width="2" Margin="10,5,10,5" Fill="Black" Opacity="0.1"/>
             <Image ToolTip="新建" Source="/Hemerocallis;component/Assets/UI_Btn_New.png" Opacity="0.4" Height="48" Width="48" MouseEnter="Image_TRBtn_MouseEnter" MouseLeave="Image_TRBtn_MouseLeave" MouseLeftButtonUp="Image_MouseLeftButtonUp_NewBtn"/>
             <Image ToolTip="保存" Source="/Hemerocallis;component/Assets/UI_Btn_Save.png" Opacity="0.4" Height="48" Width="48" MouseEnter="Image_TRBtn_MouseEnter" MouseLeave="Image_TRBtn_MouseLeave" MouseLeftButtonDown="Image_MouseLeftButtonDown_SaveBtn"/>
@@ -92,7 +91,7 @@
         <!-- 左上角章节名 -->
         <TextBlock Name="TextBlock_CurrentChapterName" Grid.Column="1" Grid.Row="0" Foreground="LightSteelBlue" Text="Title" FontSize="22" Padding="50,8,0,0" TextAlignment="Left" IsHitTestVisible="False">
             <TextBlock.Effect>
-                <DropShadowEffect Color="Black" Direction="0" ShadowDepth="0" Opacity="0.1" />
+                <DropShadowEffect Color="Black" Direction="0" ShadowDepth="0" Opacity="0.1"/>
             </TextBlock.Effect>
         </TextBlock>
         <!-- 工程树 -->
