--- a/Lyyneheym/Hemerocallis/Forms/WorldWindow.xaml
+++ b/Lyyneheym/Hemerocallis/Forms/WorldWindow.xaml
@@ -6,31 +6,68 @@
         xmlns:local="clr-namespace:Yuri.Hemerocallis.Forms"
         xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
         mc:Ignorable="d"
-        Title="World" Height="400" Width="785" MinHeight="400" MinWidth="785">
+        GlowBrush="{DynamicResource AccentColorBrush}"
+        Title="World" Height="400" Width="372" MinHeight="400" MinWidth="785" FontFamily="Microsoft YaHei">
     <Grid>
         <controls:MetroAnimatedSingleRowTabControl Name="TabControl">
-            <TabItem Header="   里程碑   ">
-                <Grid Background="SteelBlue">
-                    <RichTextBox HorizontalAlignment="Left" Height="215" Margin="64,61,0,0" VerticalAlignment="Top" Width="578">
-                        <FlowDocument>
-                            <Paragraph>
-                                <Run Text="RichTextBox"/>
-                            </Paragraph>
-                        </FlowDocument>
-                    </RichTextBox>
-
+            <TabItem Header="       里程碑       " controls:ControlsHelper.HeaderFontSize="18">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="300*"/>
+                        <ColumnDefinition Width="2*" MaxWidth="3"/>
+                        <ColumnDefinition Width="698*"/>
+                    </Grid.ColumnDefinitions>
+                    <Rectangle Grid.Column="1" Fill="LightGray" IsHitTestVisible="False"/>
+                    <ListBox Name="Listbox_Milestone" Grid.Column="0" Padding="0,5,0,0" SelectionChanged="Listbox_Milestone_SelectionChanged">
+                        <ListBoxItem>
+                            <Grid HorizontalAlignment="Center">
+                                <Label>[ 新建 ]</Label>
+                            </Grid>
+                        </ListBoxItem>
+                    </ListBox>
+                    <Grid Grid.Column="2">
+                        <ComboBox Name="ComboBox_Chapters" Margin="137,20,92,0" VerticalAlignment="Top"/>
+                        <Label Content="里程碑的章节" HorizontalAlignment="Left" Margin="10,21,0,0" VerticalAlignment="Top" Width="122"/>
+                        <Label Content="里程碑的名字" HorizontalAlignment="Left" Margin="10,60,0,0" VerticalAlignment="Top" Width="122"/>
+                        <TextBox Name="TextBox_MilestoneName" Height="23" Margin="137,59,92,0" TextWrapping="Wrap" Text="Milestone" VerticalAlignment="Top"/>
+                        <Label Content="字数阈值" HorizontalAlignment="Left" Margin="10,100,0,0" VerticalAlignment="Top" Width="122"/>
+                        <controls:NumericUpDown Name="Numberic_WordThreshold"
+                                                controls:TextBoxHelper.UseFloatingWatermark="True"
+                                                Delay="1000"
+                                                Interval="100"
+                                                Minimum="10"
+                                                Value="1000"
+                                                HasDecimals="True"
+                                                HorizontalContentAlignment="Left"
+                                                Speedup="True" Margin="137,100,92,0" Height="26" VerticalAlignment="Top" />
+                        <Label Content="当前字数" HorizontalAlignment="Left" Margin="10,216,0,0" VerticalAlignment="Top" Width="122"/>
+                        <Label Name="Label_WordNow" Content="233" HorizontalAlignment="Left" Margin="137,216,0,0" VerticalAlignment="Top" Width="313"/>
+                        <ProgressBar Name="ProgessBar_Process"
+                                     Margin="137,246,92,0"
+                                     Maximum="100"
+                                     Value="50" VerticalAlignment="Top" />
+                        <controls:MetroProgressBar x:Name="MetroProgressBar_Working"
+                                                   Margin="137,256,92,0"
+                                                   IsIndeterminate="True"
+                                                   Maximum="100"
+                                                   Minimum="0"
+                                                   Height="12" VerticalAlignment="Top"/>
+                        <Label Content="计划完成时刻" HorizontalAlignment="Left" Margin="10,147,0,0" VerticalAlignment="Top" Width="122"/>
+                        <controls:DateTimePicker
+                                    Margin="136,140,92,0"
+                                    controls:TextBoxHelper.Watermark="Select a date" Height="36" VerticalAlignment="Top" />
+                        <Button Content="保存" FontSize="12" Margin="10,291,0,0" FontFamily="Microsoft YaHei" HorizontalAlignment="Left" Width="100" Height="30" VerticalAlignment="Top"/>
+                        <Button Name="Button_Milestone_Delete" Content="删除" FontSize="12" HorizontalAlignment="Left" Margin="115,291,0,0" Width="100" FontFamily="Microsoft YaHei" Height="30" VerticalAlignment="Top"/>
+                    </Grid>
                 </Grid>
             </TabItem>
-            <TabItem Header="   时间轴   ">
-                <Grid Background="LightGreen">
-
-                </Grid>
+            <TabItem Header="       时间轴       " controls:ControlsHelper.HeaderFontSize="18">
             </TabItem>
-            <TabItem Header="   人物设定   ">
+            <TabItem Header="       人物设定       " controls:ControlsHelper.HeaderFontSize="18">
             </TabItem>
-            <TabItem Header="   其他设定   ">
+            <TabItem Header="       其他设定       " controls:ControlsHelper.HeaderFontSize="18">
             </TabItem>
-            <TabItem Header="   便签纸   ">
+            <TabItem Header="       便签纸       " controls:ControlsHelper.HeaderFontSize="18">
             </TabItem>
         </controls:MetroAnimatedSingleRowTabControl>
     </Grid>
