--- a/Lyyneheym/Hemerocallis/Forms/WorldWindow.xaml
+++ b/Lyyneheym/Hemerocallis/Forms/WorldWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
         mc:Ignorable="d"
         GlowBrush="{DynamicResource AccentColorBrush}"
-        Title="World" Height="400" Width="372" MinHeight="400" MinWidth="785" FontFamily="Microsoft YaHei">
+        Title="World" Height="400" Width="372" MinHeight="400" MinWidth="785" FontFamily="Microsoft YaHei" WindowStartupLocation="CenterScreen">
     <Grid>
         <controls:MetroAnimatedSingleRowTabControl Name="TabControl">
             <TabItem Header="       里程碑       " controls:ControlsHelper.HeaderFontSize="18">
@@ -63,6 +63,13 @@
                 </Grid>
             </TabItem>
             <TabItem Header="       时间轴       " controls:ControlsHelper.HeaderFontSize="18">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="50*" MaxHeight="250"/>
+                        <RowDefinition Height="50*"/>
+                    </Grid.RowDefinitions>
+                    
+                </Grid>
             </TabItem>
             <TabItem Header="       人物设定       " controls:ControlsHelper.HeaderFontSize="18">
             </TabItem>
