--- a/Lyyneheym/YuriLauncher/Forms/MainWindow.xaml
+++ b/Lyyneheym/YuriLauncher/Forms/MainWindow.xaml
@@ -109,7 +109,7 @@
                     </Grid.Background>
                     <GroupBox x:Name="groupBox_Key_Rclick" Header="鼠标右键" HorizontalAlignment="Left" Margin="303,10,0,0" VerticalAlignment="Top" Height="77" Width="247">
                         <Canvas>
-                            <RadioButton IsEnabled="False" x:Name="radioButton_Rclick_1" Content="仅右键菜单" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
+                            <RadioButton x:Name="radioButton_Rclick_1" Content="仅右键菜单" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
                             <RadioButton x:Name="radioButton_Rclick_2" Content="舞台->右键菜单" HorizontalAlignment="Left" VerticalAlignment="Top" Canvas.Left="116" Canvas.Top="10" IsChecked="True"/>
                         </Canvas>
                     </GroupBox>
