--- a/Lyyneheym/Hemerocallis/Forms/AboutWindow.xaml
+++ b/Lyyneheym/Hemerocallis/Forms/AboutWindow.xaml
@@ -11,13 +11,6 @@
             <ImageBrush ImageSource="/Hemerocallis;component/Assets/bg_About.png"/>
         </Canvas.Background>
         <Image Name="Image_Logo" Height="158" Width="158" Source="/Hemerocallis;component/Assets/Logo_HE.png" Canvas.Left="66" Canvas.Top="150"/>
-        <TextBlock Height="158" Canvas.Left="253" TextWrapping="Wrap" Canvas.Top="150" Width="262" Background="White">
-            Hemerocallis is a part of Project Yuri. She is expected to provide convenience for the creation of the story.
-            <LineBreak/><LineBreak/>
-            Hemerocallis is licensed under the Microsoft Public License (Ms-PL).
-            <LineBreak/><LineBreak/>
-            To get the source code of Hemerocallis, visit the Github page of
-            <Hyperlink NavigateUri="https://github.com/rinkako/YuriAVGEngine" RequestNavigate="Hyperlink_RequestNavigate">Project Yuri</Hyperlink>.
-        </TextBlock>
+        <TextBlock Height="158" Canvas.Left="253" TextWrapping="Wrap" Canvas.Top="150" Width="262" Background="White"><Run Text="Hemerocallis is a part of Project Yuri. She is expected to provide convenience for the creation of the story."/><LineBreak/><LineBreak/><Run Text="Hemerocallis is"/><Run Text=" distributed"/><Run Text=" under the Microsoft Public License (Ms-PL)."/><LineBreak/><LineBreak/><Run Text="To get the source code of Hemerocallis, visit the Github page of "/><Hyperlink NavigateUri="https://github.com/rinkako/YuriAVGEngine"><Run Text="Project Yuri"/></Hyperlink><Run Text="."/></TextBlock>
     </Canvas>
 </Window>
