--- a/Lyyneheym/YuriPlatform/MainWindow.xaml
+++ b/Lyyneheym/YuriPlatform/MainWindow.xaml
@@ -13,7 +13,7 @@
             <!-- 遮罩层 -->
             <Frame x:Name="maskFrame" Height="720" Width="1280" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" NavigationUIVisibility="Hidden" Canvas.Left="0" Canvas.Top="0" Background="Black" IsHitTestVisible="False" Visibility="Hidden" Panel.ZIndex="9999"/>
             <!-- UI层 -->
-            <Frame x:Name="uiFrame" Height="720" Width="1280" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" NavigationUIVisibility="Hidden" Canvas.Left="0" Canvas.Top="0" Background="Black" IsHitTestVisible="False" Visibility="Hidden" Panel.ZIndex="10000"/>
+            <Frame x:Name="uiFrame" Height="720" Width="1280" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" NavigationUIVisibility="Hidden" Canvas.Left="0" Canvas.Top="0" Background="Black" Visibility="Hidden" Panel.ZIndex="10000"/>
             <!-- 提示语Label -->
             <Label Name="BO_MessageLabel" Content="" FontSize="25" Foreground="White" Canvas.Left="10" Canvas.Top="10" Visibility="Hidden" IsHitTestVisible="False" Panel.ZIndex="11000">
                 <Label.Effect>
