--- a/Lyyneheym/YuriPlatform/PageView/Stage2D.xaml
+++ b/Lyyneheym/YuriPlatform/PageView/Stage2D.xaml
@@ -24,6 +24,7 @@
             <Canvas x:Name="BO_Pics_Canvas"/>
         </Viewbox>
         <!-- Debug Button -->
+        <Canvas Visibility="Hidden">
         <Button x:Name="blur" Content="blur" Width="75" Canvas.Left="640" Canvas.Top="10" Click="Blur_OnClick"/>
         <Button x:Name="noti" Content="noti" Width="75" Canvas.Left="550" Canvas.Top="10" Click="noti_Click"/>
         <Button x:Name="buttonNext" Content="GoNext" Width="75" Canvas.Left="450" Canvas.Top="10" Click="buttonNext_Click"/>
@@ -32,5 +33,6 @@
         <Button x:Name="button2" Content="TEST" Width="75" Canvas.Left="10" Canvas.Top="10" Click="button2_Click"	/>
         <Button x:Name="button1" Content="LOAD" Width="75" Canvas.Left="171" Canvas.Top="58" Click="button1_Click"/>
         <Button x:Name="button" Content="SAVE" HorizontalAlignment="Left" Margin="70,58,0,0" VerticalAlignment="Top" Width="75" Click="button_Click"/>
+        </Canvas>
     </Canvas>
 </Page>
