--- a/Lyyneheym/YuriPlatform/PageView/Stage3D.xaml
+++ b/Lyyneheym/YuriPlatform/PageView/Stage3D.xaml
@@ -88,6 +88,6 @@
                 <Button Content="IRON" HorizontalAlignment="Left" Margin="10,485,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_11"/>
             </Canvas>
         </Canvas>
-        <Button Content="Button" Width="160" Height="47" Click="Button_Click_12" Margin="33,31,1087,642"/>
+        <Button Visibility="Collapsed" Content="Button" Width="160" Height="47" Click="Button_Click_12" Margin="33,31,1087,642"/>
     </Grid>
 </Page>
